# compiz-keynav

./: AUTHORS  CMakeLists.txt  Makefile  Makefile.am  README.rst  configure.ac  keynav.c  keynav.xml  keynav.xml.in  plugin.info  standard.c
src/: keynav.cpp  keynav.h
